# capra_actions_mapper

./: CMakeLists.txt  package.xml
config/: config.yaml
launch/: mapper.launch.py
src/: mapper_node.cpp
